deploy/ubik-webapp/webapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubik-webapp
  labels:
    app: ubik-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubik-webapp
  template:
    metadata:
      labels:
        app: ubik-webapp
    spec:
      containers:
      - name: ubik-webapp
        image: ubik-webapp-test:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ubik-webapp
spec:
  selector:
    app: ubik-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubik-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "X-Forwarded-Proto $scheme";
        more_set_headers "X-Forwarded-For   $proxy_add_x_forwarded_for";
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ubik-webapp
    secretName: ubik-app-tls
  rules:
  - host: ubik-webapp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ubik-webapp
            port:
              number: 80
